stateful-todo/k8s/HA-Postgres/zalando/istio-virtualService.yaml
# virtualservice определяем правила маршрутизации
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: zalando-ui
  namespace: postgres
spec:
  hosts:
    - "zalando.k3s.dev.com"
  gateways:
    - "istio-system/gateway"
  http:
    - route:
        - destination:
            host: postgres-operator-ui.postgres.svc.cluster.local
            port:
              number: 80
